# WeChat-PyRobot

./: README.md  pyproject.toml
src/wechat_pyrobot/: __init__.py  anti_revoke32.py  anti_revoke64.py  ctypes_json.py  get_contact_list.py  hooklog32.py  hooklog64.py  hookmsg32.py  hookmsg64.py  offset.py  plugin_class.py  sendmsg32.py  sendmsg64.py
src/wechat_pyrobot/msg_plugins/: __init__.py  download_emotion.py  monitor_biz.py  print_msg.py
src/wechat_pyrobot/other_plugins/: __init__.py  http_api.py
tests/: case.py  case1.py
