[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat_pyrobot"
version = "1.1.1"
authors = [
  { name="kanadeblisst", email="kanade@blisst.cn" },
]
description = "注入Python到微信，并实现Python发送消息和接收消息"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "keystone-engine",
    "pywin32",
    "py_process_hooker",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/kanadeblisst00/WeChat-PyRobot"
"Bug Tracker" = "https://github.com/kanadeblisst00/WeChat-PyRobot/issues"
